[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autogen-ext-mcp"
version = "0.2.1"
description = "MCP Tools extension for AutoGen >= v0.4"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Richard Gyiko", email = "gyiko.richard@outlook.com" }
]
keywords = ["autogen", "autogen-ext", "ai", "tools", "integration", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
urls.homepage = "https://github.com/richard-gyiko/autogen-ext-mcp"
urls.Documentation = "https://github.com/richard-gyiko/autogen-ext-mcp#readme"
urls.Repository = "https://github.com/richard-gyiko/autogen-ext-mcp.git"
urls.Bug-Tracker = "https://github.com/richard-gyiko/autogen-ext-mcp/issues"
dependencies = [
    "autogen-core>=0.4.0,<0.5",
    "json-schema-to-pydantic>=0.2.0",
    "mcp>=1.1.2",
]

[project.optional-dependencies]
samples = [
    "autogen-agentchat>=0.4.0,<0.5",
    "autogen-ext[azure,openai]>=0.4.0,<0.5",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
]

[tool.uv]
prerelease = "allow"

[tool.hatch.build.targets.wheel]
packages = ["src/autogen_ext_mcp"]
